--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <div class="job-content">
                 <div class="job-item">
                   <div class="job-item-name">
-                    Front End Developer - Công tyYY
+                    Front End Developer - Công ty RC
                   </div>
                   <div class="job-item-date">
                     02/2022 - <span class="current-date">Hiện tại</span>
